# ethical-hacking-llm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ollama  Makefile  README.md  docker-compose.yml
benches/: benchmark.rs
docs/: API.md  DEPLOYMENT.md
models/: README.md  download_models.sh
scripts/: benchmark.sh  deploy_ollama.sh  optimize_model.py  test_api.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/cache/: memory_cache.rs  mod.rs  redis_cache.rs
src/config/: mod.rs  settings.rs
src/hacking_knowledge/: commands.rs  mod.rs  techniques.rs  tools.rs
src/model/: api_clients.rs  api_clients.rs.old  local_model.rs  mod.rs  quantized.rs
src/security/: audit.rs  mod.rs  rate_limiter.rs  validator.rs
src/utils/: errors.rs  logger.rs  metrics.rs  mod.rs
tests/: test_api.rs  test_model.rs  test_security.rs
